--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
         <h2>TCG's Client</h2>
         <p>Overpowered Client</p>
         <p>Version 6</p>
-        <a href="files/TCG'S CLIENT V6.dll" download class="download-btn">Download</a>
+        <a href="https://github.com/TCGMonk/clients/raw/refs/heads/main/TCG'S%20CLIENT%20V6.dll" download class="download-btn">Download</a>
     </div>
 
     <div class="menu">
         <h2>TCG Hyper</h2>
         <p>Hyper Client</p>
         <p>Version 2</p>
-        <a href="files/TCGHyperV2.dll" download class="download-btn">Download</a>
+        <a href="https://github.com/TCGMonk/clients/raw/refs/heads/main/TCGHyperV2.dll" download class="download-btn">Download</a>
     </div>
 
     <div class="menu">
         <h2>Lunar Client</h2>
         <p>Clean Client</p>
         <p>Version 1</p>
-        <a href="files/Lunar Client By MonkV1.dll" download class="download-btn">Download</a>
+        <a href="https://github.com/TCGMonk/clients/raw/refs/heads/main/Lunar%20Client%20By%20MonkV1.dll" download class="download-btn">Download</a>
     </div>
 </body>
 </html>
