--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cracks and Leaks</title>
+    <title>TCG Clients</title>
+
+    <meta property="og:title" content="TCG Clients">
+    <meta property="og:description" content="Welcome to the official page of "TCG Clients". This page contains DLL's which you can download and use. Only use when necessary.">
+    <meta property="og:image" content="https://tcgmonk.github.io/clients/images/thumbnail.png">
+    <meta property="og:url" content="https://tcgmonk.github.io/clients/">
+    <meta name="twitter:card" content="summary_large_image">
+    
     <style>
         body {
             background: linear-gradient(to bottom, purple, black);
