--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>TCG Clients</title>
 
     <meta property="og:title" content="TCG Clients">
-    <meta property="og:description" content="Welcome to the official page of "TCG Clients". This page contains DLL's which you can download and use. Only use when necessary.">
-    <meta property="og:image" content="https://github.com/TCGMonk/clients/raw/refs/heads/main/thumbnail">
+    <meta property="og:description" content="Welcome to the official page of TCG Clients This page contains DLL's which you can download and use. Only use when necessary.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/TCGMonk/clients/refs/heads/main/thumbnail.jpg">
     <meta property="og:url" content="https://tcgmonk.github.io/clients/">
     <meta name="twitter:card" content="summary_large_image">
     
