--- a/index.html
+++ b/index.html
@@ -77,5 +77,14 @@
         <p>Version 1</p>
         <a href="https://github.com/TCGMonk/clients/raw/refs/heads/main/Lunar%20Client%20By%20MonkV1.dll" download class="download-btn">Download</a>
     </div>
+
+
+    <h1>Modded Apks</h1>
+    <p>This part of the website are modded apks. Modded apks are Apks that are modded, self explanatory.</p>
+
+    <div class="menu">
+        <h2>Soon</h2>
+        <a href="https://github.com/TCGMonk/clients/raw/refs/heads/main/TCGHyperV2.dll" download class="download-btn">Download</a>
+    </div>
 </body>
 </html>
