--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
     <div class="menu">
         <h2>Soon</h2>
+        <p>Made by: ______</p>
         <a href="https://github.com/TCGMonk/clients/raw/refs/heads/main/TCGHyperV2.dll" download class="download-btn">Download</a>
     </div>
 </body>
