--- a/index.html
+++ b/index.html
@@ -12,33 +12,48 @@
     <meta name="twitter:card" content="summary_large_image">
     
     <style>
-        body {
-            background: linear-gradient(to bottom, purple, black);
+        /* Basic Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body, html {
+            height: 100%;
+            background: black;
             color: white;
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 20px;
+            overflow: hidden; /* Ensure the star animation fits within screen */
         }
+
         h1 {
             color: white;
         }
+
         .menu {
             background-color: #333;
             padding: 20px;
             margin: 20px 0;
             border-radius: 10px;
         }
+
         .menu h2 {
             color: white;
         }
+
         .menu p {
             color: white;
             font-size: 18px;
         }
+
         .status {
             font-size: 20px;
             color: green;
         }
+
         .download-btn {
             padding: 10px 20px;
             background-color: green;
@@ -48,12 +63,72 @@
             font-size: 16px;
             transition: background-color 0.3s;
         }
+
         .download-btn:hover {
-            background-color: green;
+            background-color: limegreen;
+        }
+
+        /* Starry background styles */
+        .star {
+            width: 2px;
+            height: 2px;
+            background: purple;
+            position: absolute;
+            animation: twinkling 3s infinite ease-in-out;
+            border-radius: 50%;
+            opacity: 0.8;
+        }
+
+        @keyframes twinkling {
+            0% {
+                transform: scale(1);
+                opacity: 0.8;
+            }
+            50% {
+                transform: scale(1.5);
+                opacity: 1;
+            }
+            100% {
+                transform: scale(1);
+                opacity: 0.8;
+            }
+        }
+
+        @keyframes moveStars {
+            from {
+                transform: translateY(0);
+            }
+            to {
+                transform: translateY(-100%);
+            }
+        }
+
+        .star-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 200%;
+            animation: moveStars 30s linear infinite;
         }
     </style>
 </head>
 <body>
+    <!-- Star container -->
+    <div class="star-container">
+        <!-- Create stars -->
+        <script>
+            for (let i = 0; i < 100; i++) {
+                const star = document.createElement('div');
+                star.classList.add('star');
+                star.style.top = Math.random() * 200 + 'vh';
+                star.style.left = Math.random() * 100 + 'vw';
+                star.style.animationDuration = Math.random() * 2 + 1 + 's';
+                document.querySelector('.star-container').appendChild(star);
+            }
+        </script>
+    </div>
+
     <h1>TCG Clients</h1>
     <p>Welcome to the official page of "TCG Clients". This page contains DLL's which you can download and use. Only use when necessary.</p>
     
