--- a/index.html
+++ b/index.html
@@ -12,50 +12,45 @@
     <meta name="twitter:card" content="summary_large_image">
 
     <style>
-        /* Live star background */
-        #stars {
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            background: black;
-        }
-        #stars:after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(white, transparent), radial-gradient(white, transparent);
-            background-size: 2px 2px, 1px 1px;
-            animation: animate 50s linear infinite;
-        }
-        @keyframes animate {
-            from {
-                background-position: 0 0, 0 0;
-            }
-            to {
-                background-position: 10000px 10000px, 20000px 20000px;
-            }
-        }
-
-        /* General page styling */
+        /* Background with stars and a purple-to-black gradient */
         body {
-            background: black;
-            color: white;
+            margin: 0;
+            background: linear-gradient(to bottom, purple, black);
+            height: 100vh;
+            overflow: hidden;
             font-family: Arial, sans-serif;
+            color: white;
             text-align: center;
             padding: 20px;
         }
 
-        h1 {
-            color: white;
+        #stars {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            background: transparent;
+            overflow: hidden;
         }
 
-        /* Styling for each client or section */
+        .star {
+            position: absolute;
+            background: white;
+            width: 2px;
+            height: 2px;
+            border-radius: 50%;
+            opacity: 0.8;
+            animation: twinkle 3s infinite alternate;
+        }
+
+        @keyframes twinkle {
+            0% { opacity: 0.5; }
+            100% { opacity: 1; }
+        }
+
+        /* Styling for sections */
         .menu {
-            background-color: rgba(51, 51, 51, 0.8); /* Slightly transparent to show stars */
+            background-color: rgba(51, 51, 51, 0.8); /* Slightly transparent */
             padding: 20px;
             margin: 20px 0;
             border-radius: 10px;
@@ -82,8 +77,8 @@
             border-radius: 5px;
             font-size: 16px;
             transition: background-color 0.3s;
-            display: inline-block; /* Ensure button is not inline with text */
-            margin-top: 10px; /* Add space above the button */
+            display: inline-block;
+            margin-top: 10px;
         }
 
         .download-btn:hover {
@@ -92,8 +87,8 @@
     </style>
 </head>
 <body>
-
-    <div id="stars"></div> <!-- Live star background container -->
+    <!-- Starry background animation -->
+    <div id="stars"></div>
 
     <h1>TCG Clients</h1>
     <p>Welcome to the official page of "TCG Clients". This page contains DLL's which you can download and use. Only use when necessary.</p>
@@ -139,6 +134,25 @@
         <p>Version 1</p>
         <a href="" download class="download-btn">Download</a>
     </div>
+
+    <script>
+        // JavaScript to generate stars
+        function createStar() {
+            const star = document.createElement('div');
+            star.classList.add('star');
+            star.style.top = `${Math.random() * 100}vh`;
+            star.style.left = `${Math.random() * 100}vw`;
+            document.getElementById('stars').appendChild(star);
+
+            // Remove stars after some time to keep performance steady
+            setTimeout(() => {
+                star.remove();
+            }, 5000);
+        }
+
+        // Generate stars repeatedly
+        setInterval(createStar, 100);
+    </script>
 
 </body>
 </html>
