--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         .star {
             width: 2px;
             height: 2px;
-            background: limegreen;
+            background: purple;
             position: absolute;
             animation: twinkling 3s infinite ease-in-out;
             border-radius: 50%;
