--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         .star {
             width: 2px;
             height: 2px;
-            background: purple;
+            background: limegreen;
             position: absolute;
             animation: twinkling 3s infinite ease-in-out;
             border-radius: 50%;
@@ -157,7 +157,7 @@
     <div class="menu">
         <h2>Soon</h2>
         <p>Made by: ______</p>
-        <a href="" download class="download-btn">Download</a>
+        <a href="#" download class="download-btn">Download</a>
     </div>
     
     <h1>Multi Tools (PC)</h1>
@@ -169,7 +169,7 @@
         <p>IP logger</p>
         <p>Made by: TCGMonk</p>
         <p>Version 1</p>
-        <a href="" download class="download-btn">Download</a>
+        <a href="#" download class="download-btn">Download</a>
     </div>
 </body>
 </html>
