--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 20px;
-            overflow: hidden; /* Ensure the star animation fits within screen */
+            overflow: auto; /* Allow scrolling if content overflows */
         }
 
         h1 {
