--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <p>EDUCATIONAL PURPOSES ONLY</p>
     
     <div class="menu">
-        <h2>TCG Contool</h2>
+        <h2>TCG Cons</h2>
         <p>IP logger</p>
         <p>Made by: TCGMonk</p>
         <p>Version 1</p>
