--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <div class="menu">
         <h2>Soon</h2>
         <p>Made by: ______</p>
-        <a href="#" download class="download-btn">Download</a>
+        <a href="" download class="download-btn">Download</a>
     </div>
     <h1>----------------------------</h1>
     <h1>Multi Tools (PC)</h1>
@@ -171,7 +171,7 @@
         <p>IP logger</p>
         <p>Made by: TCGMonk</p>
         <p>Version 1</p>
-        <a href="https://github.com/TCGMonk/clients/raw/refs/heads/main/TCG%20CONS%20PULLER.bat" download class="download-btn">Download</a>
+        <a href="https://github.com/TCGMonk/clients/tree/main/TCG%20CONS%20-%20IP%20PULLER" download class="download-btn">Download</a>
     </div>
 </body>
 </html>
