--- a/index.html
+++ b/index.html
@@ -129,8 +129,11 @@
     <h1>TCG Clients</h1>
     <p>Welcome to the official page of "TCG Clients". This page contains stuff which you can download and use. Only use when necessary.</p>
     
+    <div align="center">
     <a href="https://www.hitwebcounter.com" target="_blank">
-    <img src="https://hitwebcounter.com/counter/counter.php?page=16861322&style=0024&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>
+    <img src="https://hitwebcounter.com/counter/counter.php?page=16861322&style=0024&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites" border="0" />
+    </a>
+    </div>
     
     <h1>----------------------------</h1>
     <h1>Dlls</h1>
