--- a/index.html
+++ b/index.html
@@ -130,10 +130,12 @@
     <p>Welcome to the official page of "TCG Clients". This page contains stuff which you can download and use. Only use when necessary.</p>
     
     <div align="center">
-    <a href="https://www.hitwebcounter.com" target="_blank">
-    <img src="https://hitwebcounter.com/counter/counter.php?page=16861322&style=0024&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites" border="0" />
+    <a href="http://www.hitwebcounter.com" target="_blank">
+    <img src="http://hitwebcounter.com/counter/counter.php?page=16861322&style=0006&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter" border="0" >
     </a>
-    </div>
+    <br/>
+    <a href="http://www.hitwebcounter.com" title="Stats Of Hits" target="_blank" style="font-family: Arial, sans-serif; font-size: 12px; color: #8C8C8C;">Visitor Counter</a>
+</div>
     
     <h1>----------------------------</h1>
     <h1>Dlls</h1>
