--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
 
     <h1>TCG Clients</h1>
     <p>Welcome to the official page of "TCG Clients". This page contains stuff which you can download and use. Only use when necessary.</p>
+
+    <a href='http://www.freevisitorcounters.com'>free counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=b0f8f74aa4d355e4f8a16d9487153a316f8ea221'></script>
+    <script type="text/javascript" src="https://freevisitorcounters.com/en/home/counter/1249476/t/12"></script>
+    
     <h1>----------------------------</h1>
     <h1>Dlls</h1>
     <p>This part of the website contains dlls. Dlls are functions and data that can be used by another module.</p>
