--- a/index.html
+++ b/index.html
@@ -61,11 +61,14 @@
             text-decoration: none;
             border-radius: 5px;
             font-size: 16px;
-            transition: background-color 0.3s;
+            transition: all 0.3s ease;
+            box-shadow: 0 0 15px limegreen;
         }
 
         .download-btn:hover {
             background-color: limegreen;
+            box-shadow: 0 0 30px limegreen, 0 0 60px lime;
+            transform: scale(1.05);
         }
 
         .star {
