--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             display: inline-block;
             width: calc(100% - 40px);
             max-width: 600px;
+            box-shadow: 0 0 30px limegreen, 0 0 60px lime; /* Glowing effect */
+            animation: pulse 3s infinite; /* Pulsing animation */
         }
 
         .menu h2 {
@@ -102,6 +104,18 @@
             }
             to {
                 transform: translateY(-100%);
+            }
+        }
+
+        @keyframes pulse {
+            0% {
+                box-shadow: 0 0 30px limegreen, 0 0 60px lime;
+            }
+            50% {
+                box-shadow: 0 0 40px limegreen, 0 0 80px lime;
+            }
+            100% {
+                box-shadow: 0 0 30px limegreen, 0 0 60px lime;
             }
         }
 
