--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             display: inline-block;
             width: calc(100% - 40px);
             max-width: 600px;
-            box-shadow: 0 0 30px limegreen, 0 0 60px lime; /* Glowing effect */
-            animation: pulse 3s infinite; /* Pulsing animation */
+            box-shadow: 0 0 30px limegreen, 0 0 60px lime;
+            animation: pulse 3s infinite;
         }
 
         .menu h2 {
@@ -68,8 +68,8 @@
         }
 
         .download-btn:hover {
-            background-color: limegreen;
-            box-shadow: 0 0 30px limegreen, 0 0 60px lime;
+            background-color: purple;
+            box-shadow: 0 0 30px purple, 0 0 60px purple;
             transform: scale(1.05);
         }
 
@@ -109,13 +109,13 @@
 
         @keyframes pulse {
             0% {
-                box-shadow: 0 0 30px limegreen, 0 0 60px lime;
+                box-shadow: 0 0 30px purple, 0 0 60px purple;
             }
             50% {
-                box-shadow: 0 0 40px limegreen, 0 0 80px lime;
+                box-shadow: 0 0 40px purple, 0 0 80px purple;
             }
             100% {
-                box-shadow: 0 0 30px limegreen, 0 0 60px lime;
+                box-shadow: 0 0 30px purple, 0 0 60px purple;
             }
         }
 
