--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         h1 {
             color: white;
             margin: 20px 0;
+            animation: fadeInTitle 2s ease-out forwards;
+        }
+
+        @keyframes fadeInTitle {
+            0% { opacity: 0; transform: translateY(-50px); }
+            100% { opacity: 1; transform: translateY(0); }
         }
 
         .menu {
