--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TCG Clients</title>
 
     <meta property="og:title" content="TCG Clients">
-    <meta property="og:description" content="Welcome to the official page of TCG Clients. This page contains DLLs which you can download and use. Only use when necessary.">
+    <meta property="og:description" content="Welcome to the official page of TCG Clients. This page contains Exploits which you can download and use. Only use when necessary.">
     <meta property="og:image" content="https://raw.githubusercontent.com/TCGMonk/clients/refs/heads/main/IMG_2726.jpeg">
     <meta property="og:url" content="https://tcgmonk.github.io/clients/">
     <meta name="twitter:card" content="summary_large_image">
